--- a/Frontend/vite-project/index.html
+++ b/Frontend/vite-project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Book.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Frontend/vite-project/public/book.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Management System</title>
   </head>
